--- a/pom.xml
+++ b/pom.xml
@@ -400,7 +400,7 @@
     
     <!-- External dependencies versions -->
     <version.org.codehaus.mojo.findbugs-maven-plugin>3.0.1</version.org.codehaus.mojo.findbugs-maven-plugin>
-    <jboss-as.version>10.0.0.Alpha6-SNAPSHOT</jboss-as.version>
+    <jboss-as.version>10.0.0.Beta1-SNAPSHOT</jboss-as.version>
     <version.org.wildfly.core>2.0.0.Alpha9</version.org.wildfly.core>
     <version.org.wildfly.build-tools>1.1.0.Beta1</version.org.wildfly.build-tools>
     <version.org.wildfly.arquillian>1.0.0.CR1</version.org.wildfly.arquillian>
