--- a/blacktie/wildfly-blacktie/feature-pack/pom.xml
+++ b/blacktie/wildfly-blacktie/feature-pack/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-feature-pack</artifactId>
-            <version>${jboss-as.version}</version>
+            <version>${version.org.wildfly.wildfly-parent}</version>
             <type>zip</type>
             <exclusions>
                 <exclusion>
