--- a/blacktie/wildfly-blacktie/subsystem/pom.xml
+++ b/blacktie/wildfly-blacktie/subsystem/pom.xml
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-messaging</artifactId>
-            <version>${jboss-as.version}</version>
+            <version>${version.org.wildfly.wildfly-parent}</version>
         </dependency>
 
         <dependency>
